--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,26 +1,15 @@
 plugins {
     id 'com.android.application'
-    id 'kotlin-android'
-    id 'de.mannodermaus.android-junit5'
-    id 'dagger.hilt.android.plugin'
-    id 'kotlin-kapt'
-
     id 'com.google.gms.google-services'
     id 'com.google.firebase.crashlytics'
 }
+apply from: '../b.gradle'
 
 android {
-    compileSdkVersion versions.compileSdkVersion
-    buildToolsVersion versions.androidBuildToolVersion
-
     defaultConfig {
         applicationId "com.teamtuna.emotionaldiary"
-        minSdkVersion versions.minSdkVersion
-        targetSdkVersion versions.targetSdkVersion
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -29,52 +18,27 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        coreLibraryDesugaringEnabled true
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlinVersion"
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation "com.google.dagger:hilt-android:$versions.hiltVersion"
-    kapt "com.google.dagger:hilt-compiler:$versions.hiltVersion"
-    testRuntimeOnly(testRuntimeDeps)
-    testImplementation(testDeps)
-    androidTestImplementation(androidTestDeps)
-
-
     // room
-    implementation "androidx.room:room-runtime:$versions.roomVersion"
-    kapt "androidx.room:room-compiler:$versions.roomVersion"
-    implementation "androidx.room:room-ktx:$versions.roomVersion"
-    testImplementation "androidx.room:room-testing:$versions.roomVersion"
+    implementation 'androidx.room:room-runtime:2.3.0'
+    kapt 'androidx.room:room-compiler:2.3.0'
+    implementation 'androidx.room:room-ktx:2.3.0'
+    testImplementation 'androidx.room:room-testing:2.3.0'
 
     //work
     implementation 'androidx.work:work-runtime-ktx:2.5.0'
 
     // firebase
-    implementation platform('com.google.firebase:firebase-bom:28.2.0')
+    implementation platform('com.google.firebase:firebase-bom:28.3.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-messaging-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
 
-    implementation project(":presentation")
-    implementation project(":domain")
-    implementation project(":data")
-
-    debugImplementation 'com.github.eastar-dev.EastarLog2:log:2.1.9'
-    releaseImplementation 'com.github.eastar-dev.EastarLog2:logNoOp:2.1.9'
-    testImplementation 'com.github.eastar-dev.EastarLog2:logTest:2.1.9'
-
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
-
+    implementation project(':presentation')
+    implementation project(':domain')
+    implementation project(':data')
 }
