--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    apply from: "dependencies.gradle"
-
     repositories {
         google()
         mavenCentral()
@@ -9,13 +7,13 @@ buildscript {
     }
     
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.0"
-        classpath 'com.google.gms:google-services:4.3.8'
-        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1" //junit5
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$versions.hiltVersion"
+        classpath 'com.android.tools.build:gradle:7.0.1'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21'
+        classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1' //junit5
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
-        classpath "org.jlleitschuh.gradle:ktlint-gradle:${versions.ktlintGradlePlugin}"
+        classpath 'org.jlleitschuh.gradle:ktlint-gradle:9.4.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -25,7 +23,6 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
         maven { url 'https://jitpack.io' }
     }
     apply plugin: "org.jlleitschuh.gradle.ktlint"
