--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,80 +1,15 @@
 plugins {
     id 'com.android.library'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
-    id 'de.mannodermaus.android-junit5'
 }
 
-android {
-    compileSdkVersion versions.compileSdkVersion
-    buildToolsVersion versions.androidBuildToolVersion
-
-    defaultConfig {
-        minSdkVersion versions.minSdkVersion
-        targetSdkVersion versions.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        coreLibraryDesugaringEnabled true
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-}
+apply from: '../b.gradle'
 
 dependencies {
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlinVersion"
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
-
-    // Unit5 Tests on the JUnit Platform
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.1'
-    testImplementation 'org.mockito:mockito-junit-jupiter:3.10.0'
-    testImplementation "junit:junit:4.13.2"
-    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:5.5.2"
-
-    testImplementation 'org.mockito:mockito-core:3.10.0'
-    testImplementation 'org.mockito:mockito-inline:3.9.0'
-    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
-
-    testImplementation 'org.hamcrest:hamcrest-all:1.3'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
     // room
-    implementation "androidx.room:room-runtime:$versions.roomVersion"
-    kapt "androidx.room:room-compiler:$versions.roomVersion"
-    implementation "androidx.room:room-ktx:$versions.roomVersion"
-    testImplementation "androidx.room:room-testing:$versions.roomVersion"
-    testImplementation 'org.robolectric:robolectric:4.4'
-    implementation "androidx.test:core:$versions.androidXTestCoreVersion"
+    implementation 'androidx.room:room-runtime:2.3.0'
+    kapt 'androidx.room:room-compiler:2.3.0'
+    implementation 'androidx.room:room-ktx:2.3.0'
+    testImplementation 'androidx.room:room-testing:2.3.0'
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutinesVersion"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutinesVersion"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$versions.coroutinesVersion"
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$versions.coroutinesVersion"
-
-    implementation "com.google.dagger:hilt-android:$versions.hiltVersion"
-    kapt "com.google.dagger:hilt-compiler:$versions.hiltVersion"
-
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
-
-    implementation project(":domain")
+    implementation project(':domain')
 }
