--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,94 +1,21 @@
 plugins {
     id 'com.android.library'
-    id 'kotlin-android'
-    id 'dagger.hilt.android.plugin'
-    id 'kotlin-kapt'
 }
 
-android {
-    compileSdkVersion versions.compileSdkVersion
-    buildToolsVersion versions.androidBuildToolVersion
+apply from: '../b.gradle'
 
-    defaultConfig {
-        minSdkVersion versions.minSdkVersion
-        targetSdkVersion versions.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-    }
+/** 이러한 설정은 최후의 수단
+ * https://developer.android.com/training/testing/unit-testing/local-unit-tests?hl=ko#error-not-mocked
+ * android.testOptions.unitTests.returnDefaultValues = true
+ */
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        coreLibraryDesugaringEnabled true
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-
-    buildFeatures {
-        dataBinding = true
-    }
-
-    testOptions {
-        /**
-         * LiveData 사용시 발생. (안드로이드 프레임워크를 필요로 하기 때문에 JUnit 기반으로 테스트를 실행하면 발생)
-         * java.lang.RuntimeException: Method myLooper in android.os.Looper not mocked.
-         * https://developer.android.com/training/testing/unit-testing/local-unit-tests?hl=ko
-         * 0 또는 null로 리턴되므로 마지막 수단으로 사용
-         */
-        // unitTests.returnDefaultValues = true
-    }
-}
 
 dependencies {
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlinVersion"
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'androidx.fragment:fragment-ktx:1.3.3'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.databinding:databinding-runtime:4.2.2'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-    testImplementation 'org.mockito:mockito-core:3.10.0'
-
-    implementation "com.google.dagger:hilt-android:$versions.hiltVersion"
-    kapt "com.google.dagger:hilt-compiler:$versions.hiltVersion"
-
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    implementation 'androidx.fragment:fragment-ktx:1.3.6'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.databinding:databinding-runtime:7.0.0'
 
     implementation project(":domain")
-
-
-    // Unit5 Tests on the JUnit Platform
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.1'
-    testImplementation 'org.mockito:mockito-junit-jupiter:3.10.0'
-    testImplementation 'androidx.arch.core:core-testing:2.1.0'
-
-    testImplementation "junit:junit:4.13.2"
-    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:5.5.2"
-
-    testImplementation 'org.mockito:mockito-core:3.10.0'
-    testImplementation 'org.mockito:mockito-inline:3.9.0'
-    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
-
-    testImplementation 'org.hamcrest:hamcrest-all:1.3'
-
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutinesVersion"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutinesVersion"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$versions.coroutinesVersion"
 }
