--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     //implementation "com.google.android.material:compose-theme-adapter:1.0.1"
     // When using a AppCompat theme
     implementation 'com.google.accompanist:accompanist-appcompat-theme:0.17.0'
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha08"
 
     // Calendar
     implementation "com.github.sigmadeltasoftware:CalPose:1.1.0"
