--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -41,11 +41,12 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.1'
 
 
-    implementation "com.google.accompanist:accompanist-insets:0.17.0"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
+    implementation "com.google.accompanist:accompanist-insets:0.18.0"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.18.0"
 
     // Integration with ViewModels
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0-beta01'
+
     // Integration with observables
     implementation 'androidx.compose.runtime:runtime-livedata:1.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -62,7 +63,7 @@ dependencies {
     //implementation "com.google.android.material:compose-theme-adapter:1.0.1"
     // When using a AppCompat theme
     implementation 'com.google.accompanist:accompanist-appcompat-theme:0.17.0'
-    implementation "androidx.navigation:navigation-compose:2.4.0-alpha08"
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha09"
 
     // Calendar
     implementation "com.github.sigmadeltasoftware:CalPose:1.1.0"
