--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:theme="@style/Theme.EmotionalDiary.Compose" />
 
         <activity
-            android:name="com.teamtuna.emotionaldiary.compose.calendar.CalendarCompose"
+            android:name="com.teamtuna.emotionaldiary.calendar.CalendarCompose"
             android:theme="@style/Theme.EmotionalDiary.Compose" />
     </application>
 
